Add display fields and functions

--- a/index.html
+++ b/index.html
@@ -7,11 +7,7 @@
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
 
-  <!--
-  Uncomment the <script> tag below when you're ready to add an interactive
-  Google Map to your resume!
-  -->
-<!-- <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script> -->
+  <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
 
   <meta name="viewport" content="width=device-width">
 </head>
@@ -35,7 +31,7 @@
     </div>
     <div id="lets-connect" class="dark-gray">
       <h2 class="orange center-text">Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
+      <ul id="footerContacts" class="flex-box">
       </ul>
     </div>
   </div>
@@ -44,8 +40,8 @@
   The next line tells the browser where to download the JavaScript file you'll be
   writing. In resumeBuilder.js, you'll be writing code that builds the resume
   dynamically when this website, index.html, is opened.
-  -->
-  <script src="js/resumeBuilder.js"></script>
+-->
+<script src="js/resumeBuilder.js"></script>
 
 
   <!--
@@ -54,30 +50,34 @@
   changed each section of the resume. If you have not made any changes to a section
   of the resume, then that part of the resume does not show up. More on this in the
   course.
-  -->
+-->
 
-  <script type="text/javascript">
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('topContacts').style.display = 'none';
-    }
-    if(document.getElementsByTagName('h1').length === 0) {
-      document.getElementById('header').style.display = 'none';
-    }
-    if(document.getElementsByClassName('work-entry').length === 0) {
-      document.getElementById('workExperience').style.display = 'none';
-    }
-    if(document.getElementsByClassName('project-entry').length === 0) {
-      document.getElementById('projects').style.display = 'none';
-    }
-    if(document.getElementsByClassName('education-entry').length === 0) {
-      document.getElementById('education').style.display = 'none';
-    }
-    if(document.getElementsByClassName('flex-item').length === 0) {
-      document.getElementById('lets-connect').style.display = 'none';
-    }
-    if(document.getElementById('map') === null) {
-      document.getElementById('map-div').style.display = 'none';
-    }
-  </script>
+<script type="text/javascript">
+if(document.getElementsByClassName('flex-item').length === 0) {
+  document.getElementById('topContacts').style.backgroundColor = "#484848";
+}
+if(document.getElementsByTagName('h1').length === 0) {
+  document.getElementById('header').style.backgroundColor = "#484848";
+}
+
+if(document.getElementsByClassName('work-entry').length === 0) {
+  document.getElementById('workExperience').style.backgroundColor = "white";
+}
+if(document.getElementsByClassName('project-entry').length === 0) {
+  document.getElementById('projects').style.backgroundColor = "white";
+}
+if(document.getElementsByClassName('education-entry').length === 0) {
+  document.getElementById('education').style.backgroundColor = "white";
+}
+if(document.getElementsByClassName('flex-item').length === 0) {
+  document.getElementById('lets-connect').style.backgroundColor = "white";
+}
+if(document.getElementById('map') === null) {
+  document.getElementById('map-div').style.backgroundColor = "white";
+}
+
+
+
+</script>
 </body>
 </html>
