--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
   <div id="main">
     <div id="header" class="center-content clear-fix">
-      <ul id="topContacts" class="flex-box"></ul>
+      <hr/><ul id="topContacts" class="flex-box"></ul>
     </div>
     <div style="clear: both;"></div>
     <div id="workExperience" class="gray">
