--- a/index.html
+++ b/index.html
@@ -4,35 +4,68 @@
   <meta charset="utf-8">
   <title>Resume</title>
   <link href="css/style.css" rel="stylesheet">
+  <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css">
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
-
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
-
+  <script src="css/bootstrap/js/jquery-1.11.3.min.js"></script>
+  <script src="css/bootstrap/js/bootstrap.min.js"></script>
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
-  <div id="main">
-    <div id="header" class="center-content clear-fix">
-      <hr/><ul id="topContacts" class="flex-box"></ul>
-    </div>
+  <div class="container" id="main">
+    <header>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="header" class="center-content clear-fix">
+            <hr/><ul id="topContacts" class="flex-box"></ul>
+          </div>
+        </div>
+      </div>
+    </header>
     <div style="clear: both;"></div>
-    <div id="workExperience" class="gray">
-      <h2>Work Experience</h2>
+    <div class="row">
+      <div class="col-md-12">
+        <div class="gray row">
+          <h2>Work Experience</h2>
+        </div>
+      </div>
     </div>
-    <div id="projects">
-      <h2>Projects</h2>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="workExperience" class="gray row">
+        </div>
+      </div>
     </div>
-    <div id="education" class="gray">
-      <h2>Education</h2>
+    <div class="row">
+      <div class="col-md-12">
+        <h2>Projects</h2>
+      </div>
     </div>
-    <div id="map-div">
-      <h2>Where I've Lived and Worked</h2>
+    <div id="projects" class="row">
     </div>
-    <div id="lets-connect" class="dark-gray">
-      <h2 class="orange center-text">Let's Connect</h2>
-      <ul id="footerContacts" class="flex-box">
-      </ul>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="education" class="gray row">
+          <h2>Education</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="map-div">
+          <h2>Where I've Lived and Worked</h2>
+        </div>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="lets-connect" class="dark-gray">
+          <h2 class="orange center-text">Let's Connect</h2>
+          <ul id="footerContacts" class="flex-box">
+          </ul>
+        </div>
+      </div>
     </div>
   </div>
 
