--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
   <script src="css/bootstrap/js/jquery-1.11.3.min.js"></script>
   <script src="css/bootstrap/js/bootstrap.min.js"></script>
+  <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
+  <link href='http://fonts.googleapis.com/css?family=Bitter:400,400italic' rel='stylesheet' type='text/css'>
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
@@ -18,7 +21,7 @@
       <div class="row">
         <div class="col-md-12">
           <div id="header" class="center-content clear-fix">
-            <hr/><ul id="topContacts" class="flex-box"></ul>
+            <ul id="topContacts" class="flex-box"></ul>
           </div>
         </div>
       </div>
