--- a/index.html
+++ b/index.html
@@ -29,35 +29,43 @@
     <div style="clear: both;"></div>
     <div class="row">
       <div class="col-md-12">
-        <div class="gray row">
-          <h2>Work Experience</h2>
-        </div>
+        <div class="row">
+          <h2><span class="fontawesome-briefcase"></span>Work Experience</h2>
+          <hr/>
+          </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="workExperience" class="gray row">
-        </div>
+        <div id="workExperience" class="row"> 
+          </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <h2>Projects</h2>
+        <h2><span class="fontawesome-folder-open"></span>Projects</h2>
+        <hr/>
       </div>
     </div>
     <div id="projects" class="row">
     </div>
     <div class="row">
       <div class="col-md-12">
-        <div id="education" class="gray row">
-          <h2>Education</h2>
+        <div id="education" class="row">
+          <h2><span class="fontawesome-book"></span>Education</h2>
+          <hr/>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
+        <h2><span class="fontawesome-map-marker"></span>Where I've Lived and Worked</h2>
+      </div>
+    </div>
+    <div class="row">
+      <div class="col-md-12">
         <div id="map-div">
-          <h2>Where I've Lived and Worked</h2>
+          <h2><span class="fontawesome-map-marker"></span>Where I've Lived and Worked</h2>
         </div>
       </div>
     </div>
