--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="row">
       <div class="col-md-12">
         <div id="lets-connect" class="dark-gray">
-          <h2 class="orange center-text">Let's Connect</h2>
+          <h2 class="red center-text">Let's Connect</h2>
           <ul id="footerContacts" class="flex-box">
           </ul>
         </div>
