--- a/index.html
+++ b/index.html
@@ -19,8 +19,13 @@
   <div class="container" id="main">
     <header>
       <div class="row">
-        <div class="col-md-12">
-          <div id="header" class="center-content clear-fix">
+        <div id="header" class="center-content clear-fix">
+          <div class="col-md-10">
+            <div id="name" class="">
+            </div>
+          </div>
+          <div class="col-md-2">
+            <h2><span class="fontawesome-envelope"></span>Contact</h2>
             <ul id="topContacts" class="flex-box"></ul>
           </div>
         </div>
@@ -31,20 +36,18 @@
       <div class="col-md-12">
         <div class="row">
           <h2><span class="fontawesome-briefcase"></span>Work Experience</h2>
-          <hr/>
-          </div>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
         <div id="workExperience" class="row"> 
-          </div>
+        </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-12">
-        <h2><span class="fontawesome-folder-open"></span>Projects</h2>
-        <hr/>
+        <h2><span class="fontawesome-folder-open"></span>Web Development Projects</h2>
       </div>
     </div>
     <div id="projects" class="row">
@@ -53,7 +56,6 @@
       <div class="col-md-12">
         <div id="education" class="row">
           <h2><span class="fontawesome-book"></span>Education</h2>
-          <hr/>
         </div>
       </div>
     </div>
@@ -65,7 +67,6 @@
     <div class="row">
       <div class="col-md-12">
         <div id="map-div">
-          <h2><span class="fontawesome-map-marker"></span>Where I've Lived and Worked</h2>
         </div>
       </div>
     </div>
