--- a/index.html
+++ b/index.html
@@ -53,33 +53,43 @@
     <div id="projects" class="row">
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-8">
         <div id="education" class="row">
           <h2><span class="fontawesome-book"></span>Education</h2>
         </div>
       </div>
+      <div class="col-md-4">
+        <div id="skills" class="row">
+          <h2><span class="fontawesome-book"></span>Skills</h2>
+        </div>
+      </div>
     </div>
     <div class="row">
-      <div class="col-md-12">
+      <div class="col-md-8">
         <h2><span class="fontawesome-map-marker"></span>Where I've Lived and Worked</h2>
       </div>
-    </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="map-div">
+      <div class="col-md-4">
+        <div class="row">
+          <h2><span class="fontawesome-globe"></span>Languages</h2>
         </div>
       </div>
     </div>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="lets-connect" class="dark-gray">
-          <h2 class="red center-text">Let's Connect</h2>
-          <ul id="footerContacts" class="flex-box">
-          </ul>
-        </div>
+    <div class="col-md-8">
+     <div class="row">
+      <div  id="map-div"class="row">
       </div>
     </div>
   </div>
+  <div class="row">
+    <div class="col-md-12">
+      <div id="lets-connect" class="dark-gray">
+        <h2 class="red center-text">Let's Connect</h2>
+        <ul id="footerContacts" class="flex-box">
+        </ul>
+      </div>
+    </div>
+  </div>
+</div>
 
   <!--
   The next line tells the browser where to download the JavaScript file you'll be
