--- a/index.html
+++ b/index.html
@@ -20,13 +20,21 @@
     <header>
       <div class="row">
         <div id="header" class="center-content clear-fix">
-          <div class="col-md-10">
+          <div class="col-md-12">
             <div id="name" class="">
             </div>
           </div>
-          <div class="col-md-2">
-            <h2><span class="fontawesome-envelope"></span>Contact</h2>
-            <ul id="topContacts" class="flex-box"></ul>
+          <div class="row">
+            <div class="col-md-10">
+              <div id="role" class="row">
+              </div>
+            </div>
+            <div class="col-md-2">
+              <div class="row">
+                <h2><span class="fontawesome-envelope"></span>Contact</h2>
+                <ul id="topContacts" class="flex-box"></ul>
+              </div>
+            </div>
           </div>
         </div>
       </div>
