--- a/index.html
+++ b/index.html
@@ -2,40 +2,38 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Resume</title>
-  <link href="css/style.css" rel="stylesheet">
-  <link rel="stylesheet" href="css/bootstrap/css/bootstrap.css">
+  <title>Joel Armando's Resume</title>
   <script src="js/jQuery.js"></script>
   <script src="js/helper.js"></script>
   <script type="text/javascript" src="http://maps.googleapis.com/maps/api/js?libraries=places"></script>
   <script src="css/bootstrap/js/jquery-1.11.3.min.js"></script>
   <script src="css/bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/Chart.js"></script>
+  <script src="js/wordcloud2.js"></script>
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Roboto+Condensed:300' rel='stylesheet' type='text/css'>
   <link href='http://fonts.googleapis.com/css?family=Bitter:400,400italic' rel='stylesheet' type='text/css'>
+  <link href="css/bootstrap/css/bootstrap.css" rel="stylesheet">
+  <link href="css/style.css" rel="stylesheet">
   <meta name="viewport" content="width=device-width">
 </head>
 <body>
   <div class="container" id="main">
     <header>
-      <div class="row">
-        <div id="header" class="center-content clear-fix">
-          <div class="col-md-12">
-            <div id="name" class="">
-            </div>
+      <div class="row center-content clear-fix">
+        <div class="col-md-12">
+          <div id="name">
           </div>
-          <div class="row">
-            <div class="col-md-10">
-              <div id="role" class="row">
-              </div>
-            </div>
-            <div class="col-md-2">
-              <div class="row">
-                <h2><span class="fontawesome-envelope"></span>Contact</h2>
-                <ul id="topContacts" class="flex-box"></ul>
-              </div>
-            </div>
+        </div>
+      </div>
+      <div class="row center-content clear-fix">
+        <div class="col-md-8">
+          <div id="role">
           </div>
+        </div>
+        <div class="col-md-4">
+          <h2><span class="fontawesome-envelope"></span>Contact</h2>
+          <ul id="topContacts"></ul>
         </div>
       </div>
     </header>
@@ -61,30 +59,26 @@
     <div id="projects" class="row">
     </div>
     <div class="row">
-      <div class="col-md-8">
-        <div id="education" class="row">
-          <h2><span class="fontawesome-book"></span>Education</h2>
-        </div>
+      <div id="education" class="col-md-8">
+        <h2><span class="fontawesome-book"></span>Education</h2>
       </div>
-      <div class="col-md-4">
-        <div id="skills" class="row">
-          <h2><span class="fontawesome-book"></span>Skills</h2>
+      <div id="skills" class="col-md-4">
+        <h2><span class="fontawesome-book"></span>Skills</h2>
+        <div id="skills chart-holder" class="text-center">
+          <canvas id="skillsChart" width="300" height="400"></canvas>
         </div>
       </div>
     </div>
     <div class="row">
       <div class="col-md-8">
         <h2><span class="fontawesome-map-marker"></span>Where I've Lived and Worked</h2>
+        <div id="map-div"></div>
       </div>
       <div class="col-md-4">
-        <div class="row">
-          <h2><span class="fontawesome-globe"></span>Languages</h2>
+        <h2><span class="fontawesome-globe"></span>Languages</h2>
+        <div id="languages chart-holder" class="text-center">
+          <canvas id="languagesChart" width="300" height="400"></canvas>
         </div>
-      </div>
-    </div>
-    <div class="col-md-8">
-     <div class="row">
-      <div  id="map-div"class="row">
       </div>
     </div>
   </div>
