Fix CSS and HTML after validation

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
       </div>
       <div id="skills" class="col-md-4">
         <h2><span class="fontawesome-book"></span>Skills</h2>
-        <div id="skills chart-holder" class="text-center">
+        <div id="skills-chart-holder" class="text-center">
           <canvas id="skillsChart" width="300" height="400"></canvas>
         </div>
       </div>
@@ -76,22 +76,24 @@
       </div>
       <div class="col-md-4">
         <h2><span class="fontawesome-globe"></span>Languages</h2>
-        <div id="languages chart-holder" class="text-center">
+        <div id="languages-chart-holder" class="text-center">
           <canvas id="languagesChart" width="300" height="400"></canvas>
         </div>
       </div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div id="lets-connect" class="dark-gray">
-        <h2 class="red center-text">Let's Connect</h2>
-        <ul id="footerContacts" class="flex-box">
-        </ul>
+  <footer>
+    <div class="row">
+      <div class="col-md-12">
+        <div id="lets-connect" class="gray">
+          <h2 class="red center-text">Let's Connect</h2>
+          <ul id="footerContacts" class="flex-box">
+          </ul>
+        </div>
       </div>
     </div>
-  </div>
-</div>
+  </footer>
+
 
   <!--
   The next line tells the browser where to download the JavaScript file you'll be
