--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 </head>
 <body>
   <div class="container" id="main">
-    <header>
+    <header id="header">
       <div class="row center-content clear-fix">
         <div class="col-md-12">
           <div id="name">
@@ -81,18 +81,18 @@
         </div>
       </div>
     </div>
-  </div>
-  <footer>
-    <div class="row">
-      <div class="col-md-12">
-        <div id="lets-connect" class="gray">
-          <h2 class="red center-text">Let's Connect</h2>
-          <ul id="footerContacts" class="flex-box">
-          </ul>
+    <footer>
+      <div class="row">
+        <div class="col-md-12">
+          <div id="lets-connect" class="gray">
+            <h2 class="red center-text">Let's Connect</h2>
+            <ul id="footerContacts" class="flex-box">
+            </ul>
+          </div>
         </div>
       </div>
-    </div>
-  </footer>
+    </footer>
+  </div>
 
 
   <!--
